refactor: create customer and restaurant user services